--- a/TouchScreenBoard.Test/MainWindow.xaml
+++ b/TouchScreenBoard.Test/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:keyboard="clr-namespace:TouchKeyboard.Keyboard;assembly=TouchScreenBoard"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <StackPanel>
+    <StackPanel HorizontalAlignment="Center"
+                VerticalAlignment="Center">
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="UserName:" Margin="10" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <TextBox Width="200" FontSize="24" Margin="10" keyboard:TouchScreenKeyboard.TouchScreenKeyboard="True" />
@@ -16,5 +17,8 @@
             <TextBlock Text="Password:" Margin="10" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <PasswordBox Margin="10" Width="200" FontSize="24" keyboard:TouchScreenKeyboard.TouchScreenKeyboard="True" IsHitTestVisible="True"/>
         </StackPanel>
+        <Button x:Name="clickBtn" 
+                Content="Click Me"
+                Click="clickBtn_Click"/>
     </StackPanel>
 </Window>
