--- a/TouchScreenBoard.Test/MainWindow.xaml
+++ b/TouchScreenBoard.Test/MainWindow.xaml
@@ -4,18 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TouchScreenBoard.Test"
-        xmlns:keyboard="clr-namespace:TouchKeyboard.Keyboard;assembly=TouchScreenBoard"
+        xmlns:screenboard="clr-namespace:TouchScreenBoard;assembly=TouchScreenBoard"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <StackPanel HorizontalAlignment="Center"
                 VerticalAlignment="Center">
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="UserName:" Margin="10" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <TextBox Width="200" FontSize="24" Margin="10" keyboard:TouchScreenKeyboard.TouchScreenKeyboard="True" />
+            <TextBox Width="200" FontSize="24" Margin="10" screenboard:TouchScreenKeyboard.TouchScreenKeyboard="True" />
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="Password:" Margin="10" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <PasswordBox Margin="10" Width="200" FontSize="24" keyboard:TouchScreenKeyboard.TouchScreenKeyboard="True" IsHitTestVisible="True"/>
+            <PasswordBox Margin="10" Width="200" FontSize="24" screenboard:TouchScreenKeyboard.TouchScreenKeyboard="True" IsHitTestVisible="True"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="Number:" FontSize="24" Margin="10"/>
+            <TextBox Width="200" FontSize="24" screenboard:TouchScreenKeypad.TouchScreenKeypad="True"
+                     />
         </StackPanel>
         <Button x:Name="clickBtn" 
                 Content="Click Me"
