--- a/TouchScreenBoard/Themes/Generic.xaml
+++ b/TouchScreenBoard/Themes/Generic.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:TouchKeyboard.Keyboard"
+    xmlns:local="clr-namespace:TouchScreenBoard"
     >
     <Style x:Key="MyFocusVisual">
         <Setter Property="Control.Template">
@@ -531,5 +531,103 @@
         </Setter>
 
     </Style>
-
+    <Style TargetType="{x:Type local:TouchScreenKeypad}">
+        <Setter Property="Background" Value="WhiteSmoke"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:TouchScreenKeypad}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Focusable="False">
+                        <Border BorderBrush="Black" BorderThickness="5" CornerRadius="10">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Button Content="7" Command="local:TouchScreenKeypad.Cmd7"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="8" Command="local:TouchScreenKeypad.Cmd8"
+                                        Grid.Column="1"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="9" Command="local:TouchScreenKeypad.Cmd9"
+                                        Grid.Column="2"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="Close" Command="local:TouchScreenKeypad.CmdClose"
+                                        Grid.Column="3"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="4" Command="local:TouchScreenKeypad.Cmd4"
+                                        Grid.Row="1"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="5" Command="local:TouchScreenKeypad.Cmd5"
+                                        Grid.Row="1" Grid.Column="1"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="6" Command="local:TouchScreenKeypad.Cmd6"
+                                        Grid.Row="1" Grid.Column="2"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="Clear" Command="local:TouchScreenKeypad.CmdClear"
+                                        Grid.Row="1" Grid.Column="3"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="1" Command="local:TouchScreenKeypad.Cmd1"
+                                        Grid.Row="2"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="2" Command="local:TouchScreenKeypad.Cmd2"
+                                        Grid.Row="2" Grid.Column="1"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="3" Command="local:TouchScreenKeypad.Cmd3"
+                                        Grid.Row="2" Grid.Column="2"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="Enter" Command="local:TouchScreenKeypad.CmdEnter"
+                                        Grid.Row="2" Grid.Column="3" Grid.RowSpan="2"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Center" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="0" Command="local:TouchScreenKeypad.Cmd0"
+                                        Grid.Row="3" Grid.ColumnSpan="2"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                                <Button Content="." Command="local:TouchScreenKeypad.CmdDot"
+                                        Grid.Row="3" Grid.Column="2"
+                                        Style="{StaticResource InformButton}"
+                                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left">
+                                </Button>
+                            </Grid>
+                        </Border>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
